*Empty MediaWiki Message*

--- a/London_Metro.mw
+++ b/London_Metro.mw
@@ -1,9 +1,7 @@
 London Metro
 
-[[File:Canary Wharf tube station night 2.jpg|thumb|left|Escalators at Canary Wharf station]]
+[[File:Canary Wharf tube station night 2.jpg|thumb|right|Escalators at Canary Wharf station]]
 [[File:London Underground full map.svg|thumb|upright=1.35|A map of the entire system with accurate positions of stations but simplified presentation of lines]]
-
-
 [[File:GWR broad gauge Metropolitan Class.jpg|thumb|The Metropolitan Railway opened using GWR broad gauge locomotives{{sfnp|Peacock|1970|pp=37–38}}]]
 
 
@@ -17,182 +15,6 @@ Underground waxay asal ahaan ka soo jeeddaa Tareenka Metropolitan, waa tareenka 
 Gaadiidka koowaad ee nidaamka waxaa lagu dhisay meel ka hooseysa dusha sare, iyadoo la adeegsanayo habka gaaban iyo kuwa daboolaya; ka dib, tareeno yar yar, qumman oo qumman - taas oo u keentay naaneeynteeda, Tube-waxaa lagu dhex qoday heer qoto dheer. [8] Nidaamka wuxuu leeyahay 270 saldhig iyo 250 mayl (400 km) oo jidka ah. [9] Inkasta oo magaciisu yahay, 45% kaliya ee nidaamka ayaa dhab ahaantii dhulka hoostiisa ku yaal, iyada oo intaa ka badan oo shabakad ah oo ku yaalla degaanka banaankeeda ah ee London ku yaala dusha sare. [9] Intaas waxaa sii dheer, degaanku ma daboolayo qeybaha koonfurta ee Greater London, wax ka yar 10% ee saldhigyada ku yaalla koonfurta ee Thames. [9]
 Khadadka hore ee tubaakada, asal ahaan waxaa leh shirkado badan oo khaas ah, ayaa lagu soo ururiyey astaanta "UndergrounD" horraantii qarnigii 20aad waxayna ugu dambeyntii isku xireen xarumaha hoose iyo adeega basaska sannadkii 1933 si ay u sameeyaan gaadiidka London iyagoo hoos imanaya kantaroolka Guddiga Gaadiidka Rakaabka ee London (LPTB). Hawlwadeenada hadda jira, London Underground Limited (LUL), waa shirkad wadaag ah oo ka mid ah Gaadiidka London (TfL), shirkad sharci ah oo mas'uul ka ah shabakadda gaadiidka ee Greater London. Laga bilaabo 2015, 92% kharashka hawlgalka ayaa daboolaya qiimaha rakaabka. [10] Tikidhka safarka waxaa la soo saaray 1983 iyo Odster, nidaam aan la xirxireynin, 2003. [11] Lacagaha kaashka ah ee aan la soo xiriirin ayaa la soo saaray 2014, [12] nidaamka gaadiidka dadweynaha ee ugu horeeya ee adduunka ah si uu sidaa u sameeyo.
 LPTB wuxuu ahaa hiddaha ugu caansan farshaxanka iyo naqshadeynta, samaynta dhismooyin badan oo xarumo cusub oo cusub, farshaxanno iyo farshaxan dadweyne oo qaabdhismeed casri ah. [14] [15] [16] Khariidada Tube-ka, oo uu u qaabeeyey Harry Beck 1931, ayaa loo doortay naqshad heer qaran oo 2006-ka ah waxaana hadda ka mid ah hababka kale ee gaadiidka TfL sida Docklands Light Railway, London Goobta, Crossrail (oo rasmi ah loo yaqaan Elizabeth Line) iyo Tramlink. Meelaha kale ee caanka ah ee London Undertround waxaa ka mid ah wareega iyo Johnston xarfaha, oo uu abuuray Edward Johnston 1916.
-
-
-
-===Lines===
-
-The London Underground was used by 1.379 billion passengers in 2016/2017.<ref name=1617TfLreport/>
-
-{| class="sortable wikitable"
-|-
-! rowspan="2" | Name
-! rowspan="2" class="unsortable" |Map colour<ref>{{cite web |url=http://content.tfl.gov.uk/standard-tube-map.pdf |title=Standard Tube Map |work=Transport for London |author=London Underground |accessdate=1 December 2017}}</ref>
-! rowspan="2" |Opening Date
-! rowspan="2" |Type
-! rowspan="2" |Length
-! colspan="2" rowspan="2" |Termini
-! rowspan="2" |No.<br/>Stations
-! rowspan="2" |Depot
-! rowspan="2" |Current Stock
-! data-sort-type="number" | Trips<br/>per annum
-! Avg. trips<br/>per mile
-|-
-! colspan="2" |  (×1000)<br/><small>2016/17 figures</small><ref name="Perdata1617">{{cite web |url=https://www.whatdotheyknow.com/request/up_to_date_per_line_london_under#incoming-1109167 |title=Up to date per line London Underground usage statistics |publisher=[[TheyWorkForYou]] |date=29 April 2018}}</ref>
-|-
-| style="text-align:left;" | [[Bakerloo line]]
-| style="background:#{{LUL color|Bakerloo}}; color:white;"|Light Brown
-| 1906
-| Deep<br/>Tube
-| style="text-align:right;" | 23.2&nbsp;km<br/>14.5{{pad|4px}}mi
-| Harrow & Wealdstone<br>Queen's Park<br>Waterloo<br>Stonebridge Park
-| Elephant & Castle
-| style="text-align:right;" | 25
-| style="text-align:right;" | Stonebridge Park<br>London Road<br>Queen's Park
-| [[London Underground 1972 Stock|1972 Stock]]
-| style="text-align:right;" | 117,000
-| style="text-align:right;" | 8,069
-|-
-| style="text-align:left;" | [[Central line (London Underground)|Central line]]
-| style="background:#{{LUL color|Central}}; color:white;" | Red
-| 1900{{efn|Known as the Central London before 1937.{{sfnp|Day|Reed|2010|p=122}}}}
-| Deep<br/>Tube
-| style="text-align:right;" | 74{{0|.0}} km<br/>46{{0|.0}}{{pad|4px}}mi
-| West Ruislip<br>Ealing Broadway<br>Northolt<br>Newbury Park<br>White City<br>Debden
-| Hainault<br>Woodford<br>Epping<br>Leytonstone
-| style="text-align:right;" | 49
-| style="text-align:right;" | West Ruislip<br>Hainault<br>White City
-| [[London Underground 1992 Stock|1992 Stock]]
-| style="text-align:right;" | 288,800
-| style="text-align:right;" | 6,278
-|-
-| style="text-align:left;" | [[Circle line (London Underground)|Circle line]]
-| style="background:#{{LUL color|Circle}};"|Yellow
-| 1871{{efn|The Metropolitan and District railways joint inner circle service started in the shape of a horseshoe, a complete loop was formed in 1884{{sfnp|Horne|2006|pp=13, 24}} and the current spiral in 2009. The line has been referred to as the Circle line at least since 1936 and first appeared separately on the tube map in 1948.{{sfnp|Ovenden|2013|p=220}}}}
-| Sub<br/>surface
-| style="text-align:right;" | 27.2&nbsp;km<br/>17{{0|.0}}{{pad|4px}}mi
-| Hammersmith
-| Edgware Road
-| style="text-align:right;" | 36
-| style="text-align:right;" | Hammersmith
-| [[London Underground S7 and S8 Stock|S7 Stock]]<ref name="March Report">{{cite web |url=http://www.tfl.gov.uk/cdn/static/cms/documents/board-20140326-part-1-item05-commissioners-report.pdf |date=26 March 2014 |title=Commissioner’s Report |publisher=Transport for London |pages=3–4 |accessdate=2 April 2014}}</ref>
-| style="text-align:right;" | 73,000
-| style="text-align:right;" | 4,294
-|-
-| style="text-align:left;"|[[District line]]
-| style="background:#{{LUL color|District}}; color:white;"|Green
-| 1868
-| Sub<br/>surface
-| style="text-align:right;" | 64{{0|.0}} km<br/>40{{0|.0}}{{pad|4px}}mi
-| Ealing Broadway<br>Kensington (Olympia)<br>Richmond<br>Wimbledon
-| High Street Kensington<br>Edgware Road<br>Tower Hill<br>Upminster
-| style="text-align:right;" | 60
-| style="text-align:right;" | Upminster<br>Ealing Common<br>Hammersmith
-| [[London Underground S7 and S8 Stock|S7 Stock]]<ref name="March Report"/>
-| style="text-align:right;" | 226,100
-| style="text-align:right;" | 5,652
-|-
-| style="text-align:left;" |[[Hammersmith & City line]]
-| style="background:#{{LUL color|Hammersmith & City}};"|Pink
-| 1864{{efn|Originally a joint Great Western and Metropolitan railways service, the line first appeared separately on the tube map in 1990.{{sfnp|Rose|2007}}}}
-| Sub<br/>surface
-| style="text-align:right;" | 25.5&nbsp;km<br/> 15.8{{pad|4px}}mi
-| Hammersmith
-| Barking<br>Aldgate East<br>Plaistow
-| style="text-align:right;" | 29
-| style="text-align:right;" | Hammersmith
-| [[London Underground S7 and S8 Stock|S7 Stock]]<ref name="March Report"/>
-| style="text-align:right;" | 61,000
-| style="text-align:right;" | 3,860
-|-
-| style="text-align:left;"|[[Jubilee line]]
-| style="background:#{{LUL color|Jubilee}}; color:white;"|Grey
-| 1979
-| Deep<br/>Tube
-| style="text-align:right;" | 36.2&nbsp;km<br/>22.5{{pad|4px}}mi
-| Stanmore<br>Wembley Park
-| Stratford<br>Willesden Green<br>North Greenwich<br>West Ham
-| style="text-align:right;" | 27
-| style="text-align:right;" | Neasden<br>Stratford Market
-| [[London Underground 1996 Stock|1996 Stock]]
-| style="text-align:right;" | 280,400
-| style="text-align:right;" | 12,462
-|-
-| style="text-align:left;"|[[Metropolitan line]]
-| style="background:#{{LUL color|Metropolitan}}; color:white;"|Magenta
-| 1863
-| Sub<br/>surface
-| style="text-align:right;" | 66.7&nbsp;km<br/>42{{pad|4px}}mi
-| Baker Street<br>Aldgate<br>Harrow-on-the-Hill
-| Amersham<br>Chesham<br>Uxbridge<br>Watford<br>Rickmansworth
-| style="text-align:right;" | 34
-| style="text-align:right;" | Neasden
-| [[London Underground S7 and S8 Stock|S8 Stock]]
-| style="text-align:right;" | 80,900
-| style="text-align:right;" | 1,926
-|-
-| style="text-align:left;"|[[Northern line]]
-| style="background:#{{LUL color|Northern}}; color:white;"|Black
-| 1890{{efn|The name dates from 1937.{{sfnp|Day|Reed|2010|p=122}}}}
-| Deep<br/>Tube
-| style="text-align:right;" | 58{{0|.0}} km<br/>36{{0|.0}}{{pad|4px}}mi
-| Kennington<br>Morden
-| Edgware<br>High Barnet<br>Mill Hill East<br>Golders Green
-| style="text-align:right;" | 50
-| style="text-align:right;" | Golders Green<br>Morden
-| [[London Underground 1995 Stock|1995 Stock]]
-| style="text-align:right;" | 294,000
-| style="text-align:right;" | 8,166
-|-
-| style="text-align:left;"|[[Piccadilly line]]
-| style="background:#{{LUL color|Piccadilly}}; color:white;"|Dark Blue
-| 1906
-| Deep<br/>Tube
-| style="text-align:right;" | 71{{0|.0}} km<br/>44.3{{pad|4px}}mi
-| Cockfosters<br>Acton Town<br>Arnos Grove<br>Oakwood
-| Heathrow Terminals 2 & 3<br>Heathrow Terminal 4<br>Heathrow Terminal 5<br>Northfields<br>Rayners Lane<br>Uxbridge
-| style="text-align:right;" | 53
-| style="text-align:right;" | Cockfosters<br>Northfields
-| [[London Underground 1973 Stock|1973 Stock]]
-| style="text-align:right;" | 206,900
-| style="text-align:right;" | 4,670
-|-
-| style="text-align:left;"|[[Victoria line]]
-| style="background:#{{LUL color|Victoria}}; color:white;"|Light Blue
-| 1968
-| Deep<br/>Tube
-| style="text-align:right;" | 21{{0|.0}} km<br/>13{{pad|4px}}mi
-| Brixton
-| Walthamstow Central<br>Seven Sisters
-| style="text-align:right;" | 16
-| style="text-align:right;" | Northumberland Park
-| [[London Underground 2009 Stock|2009 Stock]]
-| style="text-align:right;" | 263,400
-| style="text-align:right;" | 20,261
-|-
-| style="text-align:left;"|[[Waterloo & City line]]
-| style="background:#{{LUL color|Waterloo & City}}; color:black;"|Turquoise
-| 1898{{efn|Until 1994 the Waterloo & City line was operated by British Rail and its predecessors.}}
-| Deep<br/>Tube
-| style="text-align:right;" | 2.5&nbsp;km<br/>1.5{{pad|4px}}mi
-| Bank
-| Waterloo
-| style="text-align:right;" | 2
-| style="text-align:right;" | Waterloo
-| [[London Underground 1992 Stock|1992 Stock]]
-| style="text-align:right;" | 16,900
-| style="text-align:right;" | 11,267
-|- class="sortbottom"
-| colspan="12" style="text-align:left;" |{{notelist}}
-|}
-
-
-
-
-
-
-
-
 
 
 
