Cabdirisaq dhalad Somaliland waa halyey u kacay Somaliland balse aan dad badani ogayn

--- a/Solomadow.mw
+++ b/Solomadow.mw
@@ -1,6 +1,6 @@
 '''Solomadow'''  waa laf ka mid ah [[Habar Jeclo]], gaar ahan [[Maxamed Abokor]], ee beesha [[Isaaq]].
 
-Magaca Solomadow waa naaneys dhowr qarni soo jiray. 
+Magaca Solomadow waa naaneys dhowr qarni soo jiray. Waana reer geesi ayaal ka dhashan sida la og yahay 
 
 Waana saddex reer oo walaalo ah:
 
