*Empty MediaWiki Message*

--- a/Beeraaha_Zeytuunnka_Dundia.mw
+++ b/Beeraaha_Zeytuunnka_Dundia.mw
@@ -2,8 +2,8 @@
 
 
 [[File:Olive niche.jpg|thumb|500px|right|zeytuunka baadka]]
-[[File:Grüne Oliven.jpg|thumb|Green olives]]
-[[File:Schwarze Oliven.jpg|thumb|Black olives]]
+[[File:Grüne Oliven.jpg|thumb|zaytuunka macaduwan]]
+[[File:Schwarze Oliven.jpg|thumb|zaytuun macaduwan]]
 
 zaytuunka badda dhexdeeda waa cunno la cuni karo oo laga helo geed ka soo baxa tiro aad u badan badda cad, waxaa jira noocyo badan oo saytuun ah halka isticmaalka uu noqon karaa noocyo badan laga bilaabo saliidda ilaa daawada, saytuunka ku jira badda dhexdeeda badiyaa waa adduunka.
 
