--- a/Qabiilada_Soomaalida.mw
+++ b/Qabiilada_Soomaalida.mw
@@ -1,4 +1,4 @@
 '''Qabiilada Soomaali''',ugu waaweyn , waa afar ee ah: Dir, Daarood, Hawiye iyo Rahanweyn.
-Kuwa yar yarna waa jiraan. Sida kuwa  waayadaan dambe .5 loogu yeero oo la dulmiyay!
+Kuwa yar yarna waa jiraan. Sida kuwa  waayadaan dambe. Waxaa jira qabiilo oo naaneys lagu bixiyo, tusaale ahaan, Digil & Mirifle waxaa lagu magac daraa Rahanweyn, iyo [[reer darawiish]] waxaa lagu magac daraa Dhulbahante.
 
 [[Category:Qabiilada Soomaalida]]
