*Empty MediaWiki Message*

--- a/Mahdi_Maxamed_Guuleed.mw
+++ b/Mahdi_Maxamed_Guuleed.mw
@@ -23,7 +23,7 @@
 | birth_place         = 
 | death_date          = 
 | death_place         = 
-| party               = [[Xisbiga Nabadda iyo Horumarka]]
+| party               = Madaxbannaaan
 | residence           = [[Muqdisho]], Soomaaliya
 | awards              = 
 | children            = 7
