*Empty MediaWiki Message*

--- a/Meheri.mw
+++ b/Meheri.mw
@@ -116,9 +116,11 @@ Beesha Meheri  waxaa ka dhashay dad faro badan oo soomali magac ku lahaa sida Sa
 
 ===Hal abuuro iyo Abwaniin===
 
+* Saalax Qaasim Naaji, fanaanka wayn ee hobolada waa bari.
 * Khaame Warsame Gawl , abwaan, gabyaa yo halabuur Soomaaliyeed.
 * Maxamuud Ciise Xaaji, qoraa, abwaan, gabyaa iyo halabuure Soomaliyeed.
 * Dahir Maxamed abwaan, gabyaa iyo hal abuure .
+* Ustaad Xudayfi, fanaan iyo abwaan
 * Faadumo ismaciil Awfaarax waxay ahayd gabadhii number one ka gashay tartankii hal abujrka Soomaaliyeed.
 * Zeraar Yusuf Zeraar abwaan, gabyaa yo halabuur Soomaaliyeed.
 
