Qaab dhisan oo wanaagsan we bogga

--- a/Dir.mw
+++ b/Dir.mw
@@ -3,17 +3,24 @@
 |image = 
 |poptime =
 |region1 = {{flagcountry|Somalia}}
-|pop =12,378,930
-|ref1=(
-🇸🇴 Somalia)pop 4.706.543
-🇹🇯 (Somaliland) pop 5.508.987
-🇩🇯 (Djibouti)(|pop1,609,132
-🇪🇹 (Ethiopia) pop3=4,540,89
-🇰🇪 (Kenya}} pop4=1,820,200
-🇬🇧 United) (Kingdom}} pop5=606,274 
+{{flagcountry|Somaliland}}
+|pop =11,378,930
+|ref1=(Somalia)pop 3.706.543
+(Somaliland) pop= 4.508.987
+|region2 = {{flagcountry|Djibouti}}
+|pop2=1,609,132
+|ref2=
+|region3 = {{flagcountry|Ethiopia}}
+|pop3=4,540,89
+|ref3=
+|region4 = {{flagcountry|Kenya}}
+|pop4=1,820,200
+|ref4=
+|region5 = {{flagcountry|United Kingdom}}
+|pop5=606,274 
 |langs = [[Af-Soomaali]]
 |rels = [[Sunni Islam]], [[Suufi]], [[Ahle Quran]]
-|related-c = [[Dir]], [[Hawiye]], [[Daarood]], [[Raxanweyn]] iyo qabiilo [[Soomaali]] kale<!-- CONFIRMED RELATIONS!!! -->
+|related-c = [[Isaaq]], [[Hawiye]], [[Daarood]], [[Raxanweyn]] iyo qabiilo [[Soomaali]] kale<!-- CONFIRMED RELATIONS!!! -->
 }}
 
 '''Dir,''' magaca saxda ah: '''Abukar''' ({{lang-en|''Dir''}}; {{lang-ar| در , قبيلة در , بنو در , قبيلة أبوكار , بنو أبوكار}}), sidoo kale loo yaqaano: ''Dirweyn'', ''Direed'', ''Beesha Direed'', ''Dhar'', ''Dur'' waa [[Soomaali|beelweyn]] ka tirsan [[Beelaha Soomaalida|qabiilada Soomaalida]] taasi oo juquraafi ahaan degta afar wadan oo ku yaala [[Geeska Afrika]]. Beesha Dir waxaa laga helaa dhamaan [[Soomaaliweyn|deegaanada Shanta Soomaaliyeed]] kuwaasi oo kala ah: [[Djibouti]](''ahaan jirtey: French Somaliland(1)''), [[Soomaaliya]](ahaan jirtey: ''British Somaliland(2) iyo Italian Somaliland(3)''), wadanka [[Kenya]], [[Kiinya|Gobolka Waqooyi Bari]](4) iyo dalka [[Itoobiya]], deegaanka [[Soomaali Galbeed]], iyo sidoo kale [[Oromo|Deegaanada Oromia]] iyo deegaanka [[Canfar]]ta(5).<ref>http://dspace-roma3.caspur.it/bitstream/2307/4150/1/Clanship,%20conflict%20and%20refugees_An%20introduction%20to%20Somalis%20in%20the%20Horn%20of%20Africa.pdf
@@ -24,10 +31,10 @@ Page 6
 
 ==Tafiirta==
 Odaygii Dir ama Abuukar wuxuu dhalay afar wiil, kuwaasi oo la kala odhan jirey:
-* Madahweyne Dir - [[Gurgura]], 
+* Madahweyne Dir - [[Gurgura]], [[Bursuuk|Barsuug]]
 * Madaluug Dir - [[Gadabuursi]]
 * Madoobe Dir - [[Ciise (beel)|Ciise]]
-* Meha Dir - sure iyo ciniftire (biimaal) (isaaq)
+* Meha Dir - "Bajumal", [[Surre (beel)|Surre]
 
 Sidoo kale waxaa la sheegaa, in Dir leedahay beel kale oo lagu magacaabo Qaldho Dir.
 
