--- a/Dir.mw
+++ b/Dir.mw
@@ -34,7 +34,7 @@ Odaygii Dir ama Abuukar wuxuu dhalay afar wiil, kuwaasi oo la kala odhan jirey:
 * Madahweyne Dir - [[Gurgura]], [[Bursuuk|Barsuug]]
 * Madaluug Dir - [[Gadabuursi]]
 * Madoobe Dir - [[Ciise (beel)|Ciise]]
-* Meha Dir - "Bajumal", [[Surre (beel)|Surre]
+* Meha Dir - "Bajumal", [[Surre (beel)|Surre]]
 
 Sidoo kale waxaa la sheegaa, in Dir leedahay beel kale oo lagu magacaabo Qaldho Dir.
 
