--- a/Dir.mw
+++ b/Dir.mw
@@ -31,7 +31,7 @@ Page 6
 
 ==Tafiirta==
 Odaygii Dir ama Abuukar wuxuu dhalay afar wiil, kuwaasi oo la kala odhan jirey:
-* Madahweyne Dir - [[Gurgura]], [[Bursuuk|Barsuug]]
+* Madahweyne Dir - [[Gurgura]], Akisho, Bursuuk
 * Madaluug Dir - [[Gadabuursi]]
 * Madoobe Dir - [[Ciise (beel)|Ciise]]
 * Meha Dir - [[Surre (beel)|Surre]], [[Biimaal]]
