/* Noloshiisa iyo Waxbarashadiisa */

--- a/Cabdiraxmaan_Cabdishakuur_Warsame.mw
+++ b/Cabdiraxmaan_Cabdishakuur_Warsame.mw
@@ -28,8 +28,13 @@ Waa masuulka keliya ee kasoo jeeda koonfurta somaaliya ee aaminsan qadiyada mada
 Cabdiraxmaan Cabdishakuur Warsame wuxuu ku dhashay magaalada Buulo Barde ee gobolka Hiiraan, dhammaadkii lixdameeyadii.
 Wuxuu waxbarashadiisa dugsiga hoose, dhexe iyo sare kusoo qaatay isla magaaladaas, wuxuu shahaadada Bachelor of Law ka qaatay Jaamacadda International University of Africa ee magaalada Khartuum ee dalka Suudaan sanaddii 1997. 
 Wuxuu shahaadada Master of Laws ka qaatay Jaamacadda National University of Malaysia sanaddii 2002. 
-Wuxuu sidoo kale koorasyo dhowr ah oo ku saabsan qorsheynta, hogaaminta, Nabad ka shaqeynta iyo strategic relations ka qaatay Machadka Hogaaminta iyo Maamulka ee London (Leadership and Management Institute in London).<ref>{{Cite web|url=https://wadajirparty.org/english/page/17/Our-Leader|title=Wadajir Party|website=wadajirparty.org}}</ref>
+Wuxuu sidoo kale koorasyo dhowr ah oo ku saabsan qorsheynta, hogaaminta, Nabad ka shaqeynta iyo strategic relations ka qaatay Machadka Hogaaminta iyo Maamulka ee London (Leadership and Management)
+Waxaa lagu xasuustaa kaalintii oo ka qaatay shirkii dib u hishiisiinta oo ka dhacay dalka oo xubin muhiim ah ka ahaaa isla xiligaas waxa oo noqday mudane barlamaanka iyo waziirka qorshaynta iyo xariirka caalamiga
+Cabdiraxmaan cabdishakuur waxa oo lataliye usoo noqday madaxweyne xasan sheikh mohamud
+Waxa oo noqday musharax madaxweyne doorashadii dhacday 2016/17 hadana waxa oo u taaganyahay doorashada soo socoto oo la filaayo in ay dhacdo horanta 2021
+Waa siyaasi magac iyo miisaan ku dhex leh bulshada soomaaliyed
 
+Qoraa: abshir hussein mohamed (abshir baari)
 
 == Xigoshada ==
 <!-- Inline citations added to your article will automatically display here. See en.wikipedia.org/wiki/WP:REFB for instructions on how to add citations. -->
