*Empty MediaWiki Message*

--- a/Dad.mw
+++ b/Dad.mw
@@ -6,4 +6,4 @@
 
 Arrimaha ugu weyn oo heysata dadka waa shaqo iyo waxbarashada. Dadka lumo marmar waxay uu jeestaan [[balwad]].
 
-[[Category:Dad]]
+[[Category:Dad| ]]
