*Empty MediaWiki Message*

--- a/Beeraha_Soya_Dunida.mw
+++ b/Beeraha_Soya_Dunida.mw
@@ -1,7 +1,7 @@
 '''Beeraha Soya Dunida''' 
 
 [[File:Soybean.USDA.jpg|thumb|right|500px]]
-[[File:Soybeanvarieties.jpg|thumb|upright|Varieties of soybeans are used for many purposes.]]
+[[File:Soybeanvarieties.jpg|thumb|upright|soya Macaduwan]]
 
 jira-fuool
 
