--- a/Sool.mw
+++ b/Sool.mw
@@ -13,7 +13,7 @@
 |image_shield           = 
 |image_map              =Somalia  regions map Sool.png
 |mapsize                =250px
-|map_caption            =Waxay Somaliland kaga taal.
+|map_caption            =Waxay kaga taal bartamaha beelaha [[reer darawiish]].
 |coordinates_display    =inline,title
 |coordinates_region     =SO
 |subdivision_type       =Dalka
