*Empty MediaWiki Message*

--- a/Sool.mw
+++ b/Sool.mw
@@ -17,7 +17,7 @@
 |coordinates_display    =inline,title
 |coordinates_region     =SO
 |subdivision_type       =Dalka
-|subdivision_name       ={{flag|Somaliland}}
+|subdivision_name       =Bulshada darawiishta ka salaysneyd
 |subdivision_type1      =
 |subdivision_name1      =
 |seat_type              =Xarun
