*Empty MediaWiki Message*

--- a/Sool.mw
+++ b/Sool.mw
@@ -21,7 +21,7 @@
 |subdivision_type1      =
 |subdivision_name1      =
 |seat_type              =Xarun
-|seat                   =[[Laascaanood]] (Dhanka maamulnimo)<br>[[Sahdheer]] (dhanka garaadada)<br>[[Taleex]] (dhanka nuxurka)
+|seat                   =[[Laascaanood]] (Dhanka maamulnimo)<br>[[Saaxdheer]] (dhanka garaadada)<br>[[Taleex]] (dhanka nuxurka)
 |government_type        = 
 |leader_title           = madax weyne
 |leader_name            = garaad saleebaan garaad maxamed
