*Empty MediaWiki Message*

--- a/Badweynta_Baasifiga.mw
+++ b/Badweynta_Baasifiga.mw
@@ -34,7 +34,7 @@ Wagaciisa waa Fardinan Magilaan sanadka markuu ahaa 1521 miilaadiga.
 Sababta uu ugu bixiyey in ay aheyd badweyn (degan).
 Magaca Pacific waxaa loola jeedaa "degan" run ahaantii waa badweyn degan hirarna aan kubadneyn.
 Waad kumahadsantihiin aqriskiina.
-Waa anigoo ah Awil Barre Mohamud. 
+Waa anigoo ah Awil Aden Ali
 
 '''Badweynta Baasifig''' ([[ingiriis]]: Pacific Ocean) waa [[biyo|biyo dhanaan]] oo aad u baaxad wayn isla markaana qariya 46% [[Qolof dhul|oogada biyaha dhulka]]. 
 
