--- a/Faransiis_Guyana.mw
+++ b/Faransiis_Guyana.mw
@@ -1,6 +1,6 @@
 {{Coord|4|N|53|W|type:adm1st_region:GF|display=title}}
 [[File:Location-Guyane-France.png|400px|right|thumb|]]
-'''Faransiis Guyana''' ({{af+fr|Guyane française}}) waa dhul ka mid ah dalka [[Faransiiska]], waxoona ku yaalaa [[Ameerikada koonfureed]]. Gobolkaan waxoona xeeb ku leeyahay [[Badda Karabiya]]. Magaalo madaxda gobolkaan waxaa ladhahaa [[Kayene]].
+'''Faransiis Gwiiyan''' ({{af+fr|Guyane française}}) waa dhul ka mid ah dalka [[Faransiiska]], waxoona ku yaalaa [[Ameerikada koonfureed]]. Gobolkaan waxoona xeeb ku leeyahay [[Badda Karabiya]]. Magaalo madaxda gobolkaan waxaa ladhahaa [[Kayene]].
 
 ,
 
