--- a/Uunsi.mw
+++ b/Uunsi.mw
@@ -1,7 +1,7 @@
 [[File:Frankincense 2005-12-31.jpg|thumb|Uunsi]]
 waxaanu u baahanahay dareraha xabagta geedka maraaga ({{lang-ar|لبان}}; {{lang-en|Frankincense}}) magaca [[Saynis]]: ''Boswellia Carterii'', waa xabag ama caano geed , qayb ka mida luubaanta ayaa la calaaliliyaa guryahana waa lagu uunsiyaa iyadoo leh caraf heer sare ah, waxaa kaloo loo adeegsadaa daawo dhaqameedka, Luubanta waxaa aad loogu yaqaanaa dhaqanka Soomaaliyeed iyo kuwa carabta. Luubaanta waxaa lagu shidaa [[Dabqaad]]<nowiki/>ka oo laga sameeyo [[dhagax]] khafiif ah sida [[Burjiko|burjikada]].
 
-luubaanta ayaa noocyo badan leh waxaana geedka luubaaneedku soo saaraa ilaa sadex mar sanadkii, meelaha uu ka baxo geed luubaaneedka ugu qaalisan dunida ayaa ah woqooyi bari soomaaliya , [[cumaan]] iyo [[Yemen|yaman]], waxaa kaloo laga hela jasiirada soqodra ee ku aadan woqooyi bari soomaaliya, ganacsi ayaa ka dhexayn jiray  soomaalida iyo faraacintii  luubaanta ku salaysan, dhulkii uduga ayaa lagu magacaabi jiray dhulka soomaalida,
+luubaanta ayaa noocyo badan leh waxaana geedka luubaaneedku soo saaraa ilaa sadex mar sanadkii, meelaha uu ka baxo geed luubaaneedka ugu qaalisan dunida ayaa ah woqooyi bari [[Soomaaliya]], [[Cumaan]] iyo [[Yemen|Yaman]], waxaa kaloo laga hela jasiirada soqodra ee ku aadan woqooyi bari soomaaliya, ganacsi ayaa ka dhexayn jiray  soomaalida iyo faraacintii  luubaanta ku salaysan, dhulkii uduga ayaa lagu magacaabi jiray dhulka soomaalida,
 
 == Jaadadka lubaanka ==
 waxaa kala duwan geedaha dhala luubaanta xaga jooga iyo xabagta ay soo saaraan, jaadadka geed lubaaneedka  waxaa ka mid ah<ref>http://mucaadsh.blogspot.co.ke/2015/10/wax-ka-baro-khayraadka-dhulkeenu-qaniga.html</ref>
