*Empty MediaWiki Message*

--- a/Badweynta_Hindiya.mw
+++ b/Badweynta_Hindiya.mw
@@ -61,116 +61,8 @@ Dhaqanka hore ee dunida ee Mesopotamia (laga bilaabo Sooma), Masar hore, iyo Hin
 
 Intii lagu guda jiray ciidankii ugu horreeyay ee [[Masar]] (3000 BCE), badmaaxayaasha ayaa loo diray biyaha, iyagoo u safraya Punt, oo loo maleynayo inay qayb ka yihiin maanta [[Soomaaliya]]. Maraakiibta soo laabtay waxay keeneen dahab iyo malmal. Dhaqdhaqaaqa badda ee ugu horeeyay ee u dhaxeeya Mesobotamiya iyo Hindu-Indus (oo ah 2500 CH) ayaa lagu qabtay xeebta Badweynta Hindiya. Fikrado badan oo ka tirsan dabayaaqadii 3-da sano ee BCE ayaa laga yaabaa inay soo galaan aagga, laakiin ma jirin degsiimo.
 
-Biyaha Badweynta [[Hindiya]] ayaa furay aagagga xuduudaha u ah ganacsiga ka hor inta aaney Atlantic ama Pacific Ocean. Meelaha xoogga leh ayaa sidoo kale loola jeeday maraakiibta si sahal ah u dhoofi kara galbeedka horraantii xilliga xagaaga, ka dibna dhowr bilood sug oo soo noqo bari. Tani waxay u oggolaatay dadyowga reer Indonesia in ay ka gudbaan 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+Biyaha Badweynta [[Hindiya]] ayaa furay aagagga xuduudaha u ah ganacsiga ka hor inta aaney Atlantic ama Pacific Ocean. Meelaha xoogga leh ayaa sidoo kale loola jeeday maraakiibta si sahal ah u dhoofi kara galbeedka horraantii xilliga xagaaga, ka dibna dhowr bilood sug oo soo noqo bari. Tani waxay u oggolaatay dadyowga reer Indonesia in ay ka gudbaan
+Waxaa darasadaan idiin surta galiyey Ina akhristan mudane Cawil Aden Ali .
 
 = Sidoo kale Fiiri =
 
