*Empty MediaWiki Message*

--- a/Jijeele.mw
+++ b/Jijeele.mw
@@ -12,7 +12,7 @@
 |related-c= [[Baadicade]], and other [[Hawiye]] and [[Samaale]]
 }}
 
-Jijeele waxay ka mid tahay Beelwaynta [[Gugundhabe]] [[Hawiye]] ee deegan u ah wadanka [[Somalia]],[[Ethiopia]] iyo wadanka [[Kenya]]
+Jijeele yaquub was abgal waxay ka mid tahay Beelwaynta [[Gugundhabe]] [[Hawiye]] ee deegan u ah wadanka [[Somalia]],[[Ethiopia]] iyo wadanka [[Kenya]]
 
 <br>
 
