*Empty MediaWiki Message*

--- a/Jijeele.mw
+++ b/Jijeele.mw
@@ -43,11 +43,11 @@ Beeshu waxay wada dasheen beelaha Gugundhabe ee 4ta ah: jidle, baadicade, abubak
 *****Dudbiye
 ******Makaail
 *******Iidsuge
-********Reer faqay
+********Reer faqay asalkooda majeerteeyn 
 *********Yuusuf Nuur
 ********Habarwadaag
 ********Cabdi suge
-******Yaaquub
+******Yaaquub oo ah asalkooda abgal owbakar gabane.
 ******Gudwaa
 ******Kulmiye
 ******Dumaal
