*Empty MediaWiki Message*

--- a/Garaad_Jaamac_Garaad_Cali.mw
+++ b/Garaad_Jaamac_Garaad_Cali.mw
@@ -1,5 +1,5 @@
 {{Infobox person
-|name        = Garaad Jaamac Garaad Cali
+|name        = Garaad Abdiqani
 |image       =
 |citizenship = Soomaali 
 |birth_date  = 
@@ -10,16 +10,10 @@
 |spouse      =
 |children    =
 }}
-'''Garaad Jaamac Garaad Cali''' waa  waa madax dhaqameed ahna garaadka guud ee qabiilka [[reer darawiish]]. waxaa dhalay garaadkii ka horreyey Garaad Cabdiqani, waxaa loogu caleemo saaray Magaalada [[Laascaanood]] taariikhda marka ee eheed 22 may 2006<ref>http://www.biyokulule.com/garaad%20jaamac.htm</ref>, Munaasabadda caleemo saarkiisa waxaa ka soo qayb galay dad aad u fara badan oo ay ku jiraan siyaasiyiin sarsare oo ka soo jeeda Dowladda Kumeel gaarka ah ee Soomaaliya, Somaliland iyo Puntland.
-
-
-==Taariikh nololeed==
-
-
-
-
+'''Garaad Cabdiqani''' wuxuu ahaa garaadka guud ee dhanka beelaha qabiilka [[reer darawiish]] 1985kii ilaa 2006kii. 
 
 
 {{gumud}}
 ==Tixraac==
+
 [[category:Dhulbahante]]
