Noqay bedelaadka 205403 ee sameeyay  [[Special:Contributions/197.220.84.5|197.220.84.5]] ([[User talk:197.220.84.5|hadal]])

--- a/Buurdhuxunle.mw
+++ b/Buurdhuxunle.mw
@@ -1,1 +1,3 @@
-{{merge to|Degmada Buurdhuxunle Bakool Soomaaliyaa|<nowiki>{{ Degmada Buurdhuxunle Bakool Soomaaliyaa</nowiki>}}
+{{merge to|Buurdhuxunle|date=Sebteembar 2020}}
+
+Buurdhuxunle waa degmo kamid ah degmoyinka gobolka bakool Buurdhuxunle waxa la aas aasey sanadi 1957m waxayna dagmada Buurdhuxunle Ujirtaa magaala ndaxda  Huddur 90km degmada Buurdhuxunle  waxaana daga beesha hadame oo degta gobolada baay iyo bakool waana magaalo ganacsiyeed oo aad u mashquul badan Buurdhuxunle Bakool SOMALIA madhaayto somalia
